# batch-encrypted-inference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  git_access  git_access.pub
ThroughputModels/: TResNet20N128.cpp  TResNet20N16.cpp  TResNet20N256.cpp  TResNet20N32.cpp  TResNet20N512.cpp  TResNet20N64.cpp  TResNet34N128.cpp  TResNet34N128P2.cpp  TResNet34N16.cpp  TResNet34N256.cpp  TResNet34N32.cpp  TResNet34N64.cpp
python/: exporting_weights.py  resnet20Model.py
python/resnet20/: ResNet20.ipynb  ResNet20DataFold.ipynb  mask.ipynb  resnet20.py  resnet20Model.py
python/resnet34/: ResNet34.ipynb  ResNet34DataFold.ipynb  resnet34.py
python/utils/: cifar10.py  train.py
results/: Accuracies.ipynb  accuracy.py
results/resnet20/: pytorchpredictions.txt
results/resnet34/: pytorchpredictions.txt
src/: ANNBatchController.cpp  ANNBatchController.h  ANNController.cpp  ANNController.h  FHEController.cpp  FHEController.h  Utils.h  UtilsBatchData.h  UtilsData.h  UtilsImage.h  stb_image.h
weights/resnet34/: layer0_conv1_bias.csv  layer0_conv1_weight.csv  layer1_block1_conv1_bias.csv  layer1_block1_conv1_weight.csv  layer1_block1_conv2_bias.csv  layer1_block1_conv2_weight.csv  layer1_block2_conv1_bias.csv  layer1_block2_conv1_weight.csv  layer1_block2_conv2_bias.csv  layer1_block2_conv2_weight.csv  layer1_block3_conv1_bias.csv  layer1_block3_conv1_weight.csv  layer1_block3_conv2_bias.csv  layer1_block3_conv2_weight.csv  layer2_block1_conv1_bias.csv  layer2_block1_conv1_weight.csv  layer2_block1_conv2_bias.csv  layer2_block1_conv2_weight.csv  layer2_block1_shortcut_bias.csv  layer2_block1_shortcut_weight.csv  layer2_block2_conv1_bias.csv  layer2_block2_conv1_weight.csv  layer2_block2_conv2_bias.csv  layer2_block2_conv2_weight.csv  layer2_block3_conv1_bias.csv  layer2_block3_conv1_weight.csv  layer2_block3_conv2_bias.csv  layer2_block3_conv2_weight.csv  layer2_block4_conv1_bias.csv  layer2_block4_conv1_weight.csv  layer2_block4_conv2_bias.csv  layer2_block4_conv2_weight.csv  layer3_block1_conv1_bias.csv  layer3_block1_conv1_weight.csv  layer3_block1_conv2_bias.csv  layer3_block1_conv2_weight.csv  layer3_block1_shortcut_bias.csv  layer3_block1_shortcut_weight.csv  layer3_block2_conv1_bias.csv  layer3_block2_conv1_weight.csv  (+34 more)
